--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,11 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link href="./signin.css" rel="stylesheet" type="text/css" />
+    <link
+      href="http://localhost:3000/css/login.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>Sweat Sign In</title>
   </head>
 
