Added dependencies to authenticate user and added app router

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -95,9 +95,9 @@
           <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
-              <button type="button" class="btn btn-lg col-sm-12 cancel-button">
+              <a href="/" class="btn btn-lg col-sm-12 cancel-button">
                 Cancel
-              </button>
+              </a>
             </div>
             <div class="col-sm-1"></div>
           </div>
