Added login func

--- a/views/users/welcome.ejs
+++ b/views/users/welcome.ejs
@@ -50,7 +50,9 @@
               <div class="row">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10">
-                  <a href="/login" class="btn btn-lg col-sm-12 signin-button"
+                  <a
+                    href="/users/login"
+                    class="btn btn-lg col-sm-12 signin-button"
                     >Sign in</a
                   >
                 </div>
@@ -63,7 +65,9 @@
               <div class="row">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10">
-                  <a href="/signup" class="btn btn-lg col-sm-12 signup-button"
+                  <a
+                    href="/users/signup"
+                    class="btn btn-lg col-sm-12 signup-button"
                     >Sign up</a
                   >
                 </div>
