--- a/public/css/landingPage.css
+++ b/public/css/landingPage.css
@@ -359,3 +359,129 @@ button {
     content: " More";
   }
 }
+
+/* Style the main content */
+.main {
+  margin-left: 160px; /* Same as the width of the sidenav */
+  padding: 0px 10px;
+}
+
+/* Style the header */
+.header {
+  padding: 10px 186px;
+  background: #394867;
+  color: #9ba4b4;
+  text-align: center;
+  font-family: Audiowide;
+}
+/* Content-Box Title */
+.h4 {
+  font-family: Audiowide;
+}
+/* Style in footer */
+.footer {
+  padding: 10px 186px;
+  background-color: #394867;
+  color: #9ba4b4;
+  text-align: center;
+}
+.sweatLogo {
+  float: left;
+  height: 50px;
+  width: 50px;
+  object-fit: contain;
+}
+
+/* Page content */
+.content {
+  padding: 16px;
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+}
+.btnReply button {
+  color: black;
+  padding: 2px 5px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 102px;
+}
+
+/*background containing the content boxes */
+.body {
+  background: #9ba4b4;
+  border-radius: 25px;
+  padding: 10px 135px;
+  color: #14274e;
+}
+/* honestly not sure */
+.randomContent {
+  background: #f1f6f9;
+  padding: 10px 186px;
+  color: #14274e;
+}
+
+/*Content box is the box containing each post*/
+.content-box {
+  border: 3px solid #14274e;
+  border-radius: 25px;
+  background-color: #394867;
+  color: #9ba4b4;
+  padding: 3%;
+}
+/*holds all the content boxes*/
+.content {
+  margin: 0 auto;
+  display: block;
+}
+/*text after a video or image*/
+.txtCaption {
+  padding: 0 5%;
+}
+/*User who posted the content / reply*/
+.txtAuthor {
+  font-size: 10px;
+}
+/*the time it was posted*/
+.txtDate {
+  font-size: 10px;
+}
+/*Image formating */
+.img {
+  padding: 3%;
+  float: left;
+  width: 50%;
+  height: 100%;
+  object-fit: cover;
+}
+/*Box containing the iframe so that you can center and resize the video */
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+/*the resizing part of the video box */
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  padding: 3%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
