--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,188 +1,197 @@
-<!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="http://localhost:3000/css/signup.css" rel="stylesheet" type="text/css">
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="ejs.min.js"></script>
+    <title>Sign up for Sweat</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 
-<html lang ="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="http://localhost:3000/css/signup.css" rel="stylesheet" type="text/css">
+</head>
 
-        <style>
-            body {font-family: Arial, Helvetica, sans-serif;}
-        </style>
-       
-    </head>
-
-    <body>
+<body>
 
 
-        <div class="form-popup" id="signUpForm">
-            <form action="/action_page.php" class="form-container">
-                <div class="container">
-                    <h1>Sign Up</h1>
-                    <p>Please fill out this form to create an account with Sweat.</p>
-                    <hr>
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtFirstName"><b>First Name:</b></label>
-                            <input type="text" placeholder="First Name" name="txtFirstName" required>
-                        </div>
-                    </div>
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtLastName"><b>Last Name:</b></label>
-                            <input type="text" placeholder="Last Name" name="txtLastName" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtUserName"><b>Username:</b></label>
-                            <input type="text" placeholder="Username" name="txtUserName" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtDoB"><b>Date of birth:</b></label>
-                            <input type="date" id="txtDoB" name="txtDoB" required class="form-control" placeholder="Date of birth">
-                        </div>
-                    </div>
-
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtEmail"><b>Email:</b></label>
-                            <input type="text" placeholder="Enter Email" name="txtEmail" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group col">
-                        <div class="auto">
-                           <label for="txtConfirmEmail"><b>Confirm Email:</b></label>
-                           <input type="text" placeholder="Confirm Email" name="txtConfirmEmail" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtPassword"><b>Password:</b></label>
-                            <input type="password" placeholder="Enter Password" name="txtPassword" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtConfirmPassword"><b>Confirm Password:</b></label>
-                            <input type="text" placeholder="Confirm Password" name="txtConfirmPassword" required>
-                        </div>
-                    </div>
-                    
-                    <div class="form-group col">
-                        <label for="chkGender"><b>Gender:</b> </label>
-                        <div class="auto">
-                            <div class="form-check">
-                                <input type="radio" id="rbMale" name="gender" value="male" class="form-check-input">
-                                <label for="rbMale" class="form-check-label"><b>Male</b></label>
-                            </div>
-                            <div class="form-check">
-                                <input type="radio" id="rbFemale" name="gender" value="female" class="form-check-input">
-                                <label for="rbFemale" class="form-check-label"><b>Female</b></label>
-                            </div>
-                            <div class="form-check">
-                                <input type="radio" id="rbOther" name="gender" value="other" class="form-check-input">
-                                <label for="rbOther" class="form-check-label"><b>Other</b></label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtAddress" class="col-form-label">
-                                <b>Address:</b> 
-                            </label>
-                            <div class="col auto">
-                                <input type="text" id="txtAddress" name="txtAddress" class="form-control" placeholder="Street"> 
-                            </div>
-                            <div class="col auto">
-                                <input type="text" id="txtCity" name="txtCity" class="form-control" placeholder="City"> 
-                            </div>
-                            <div class="col auto">
-                                <input type="text" id="txtState" name="txtState" class="form-control" placeholder="State"> 
-                            </div>
-                            <div class="col auto">
-                                <input type="text" id="txtZipcode" name="txtZipcode" class="form-control" placeholder="Zipcode" pattern="[0-9]{5}"> 
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-
-                    <div class="form-group col">
-                        <div class="auto">
-                            <label for="txtSecurityQuestions"><b>Security Questions:</b></label>
-                            <select name="securityQuestions" id="securityQuestions">
-                                <option value="firstJob">What was your first place of employment?</option>
-                                <option value="schoolMascot">What was your schools mascot?</option>
-                                <option value="sportsTeam">What is your favorite team?</option>
-                                <option value="workOut">What is your favorite workout?</option>
-                            </select>
-                            <br>
-                            <div class="col auto">
-                                <input type="text" placeholder="Answer" name="txtSecurityAnswer" class="form-control" required></input>
-                            </div>   
-                        </div>
-                    </div>    
-                    
-                    <div class="form-group col">
-                        <div class="auto">
-                            <div class="col-25">
-                                <label for="txtBio"><b>About Me:</b></label>
-                            </div>
-                            <div class="col-95">
-                                <textarea id="txtBiobox" name="bioBox" rows="4" cols="50" class="form-control" placeholder = "Tell us about yourself."></textarea>
-                                <br><br>                        
-                            </div>
-                        </div>
-                    </div>
-
-                    <label for="chkRemeber"><b>Remember me:</b> <input type="checkbox" checked="checked" name="remember" style="margin-bottom: 15px"></label>
-
-                    <p>By creating an account you agree to our <a href="#" style="color: #1427FE">Terms & Privacy</a>.</p>
-
-                    <div class="clearfix">
-                        <button type="submit" class="btn">Sign Up</button>
-                        <button type="submit" class="btn cancel" onclick="goBack()">Close</button>
+    <div class="form-popup" id="app">
+        <form @submit="checkForm" action="/users/create" method="post" class="form-container">
+            <div class="container">
+                <h1>Sign Up</h1>
+                <p v-if="errors.length">Please correct the following:
+                <ul>
+                    <li v-for="error in errors">{{ error }}</li>
+                </ul>
+                </p>
+                <p>Please fill out this form to create an account with Sweat.</p>
+                <hr>
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtFirstName"><b>First Name:*</b></label>
+                        <input id="txtFirstName" v-model="firstName" type="text" placeholder="First Name"
+                            name="firstName">
                     </div>
                 </div>
-            </form>
-        </div>
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtLastName"><b>Last Name:*</b></label>
+                        <input id="txtLastName" v-model="lastName" type="text" placeholder="Last Name"
+                            name="lastName">
+                    </div>
+                </div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtUserName"><b>Username:*</b></label>
+                        <input id="txtUserName" v-model="userName" type="text" placeholder="Username"
+                            name="userName">
+                    </div>
+                </div>
 
-        <script type="text/javascript">
-            $(function () {
-                $("#btnSubmit").click(function () {
-                    var password = $("#txtPassword").val();
-                    var confirmPassword = $("#txtConfirmPassword").val();
-                    var email = $("#txtEmail").val();
-                    var confirmEmail = $("#txtConfirmEmail").val();
-                    if (password != confirmPassword) {
-                        alert("Passwords do not match.");
-                        return false;
-                    }
-                    else if (email != confirmEmail){
-                        alert("Email addresses do not match.")
-                        return false;
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtDoB"><b>Date of birth:*</b></label>
+                        <input id="txtDoB" type="date" v-model="dob" name="dob" required class="form-control" required>
+                    </div>
+                </div>
 
-                    }
-                    return true;
-                });
-            });
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtEmail"><b>Email:*</b></label>
+                        <input id="txtEmail" v-model="email" type="email" placeholder="Enter Email" name="email">
+                    </div>
+                </div>
 
-            function goBack() {
-                window.history.back();
-            }
-        </script>
-    </body>
-</html>
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtConfirmEmail"><b>Confirm Email:*</b></label>
+                        <input id="txtConfirmEmail" v-model="confirmEmail" type="email" placeholder="Confirm Email"
+                            name="confirmEmail">
+                    </div>
+                </div>
+
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtPassword"><b>Password:*</b></label>
+                        <input id="txtPassword" v-model="password" type="password" placeholder="Enter Password"
+                            name="password">
+                    </div>
+                </div>
+
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtConfirmPassword"><b>Confirm Password:*</b></label>
+                        <input id="txtConfirmPassword" v-model="confirmPassword" type="password"
+                            placeholder="Confirm Password" name="confirmPassword">
+                    </div>
+                </div>
+
+                <div class="form-group col">
+                    <label><b>Gender:</b> </label>
+                    <div class="auto">
+                        <div class="form-check">
+                            <input type="radio" id="rbMale" v-model="gender" name="gender" value="male" class="form-check-input">
+                            <label for="rbMale" class="form-check-label"><b>Male</b></label>
+                        </div>
+                        <div class="form-check">
+                            <input type="radio" id="rbFemale" v-model="gender" name="gender" value="female" class="form-check-input">
+                            <label for="rbFemale" class="form-check-label"><b>Female</b></label>
+                        </div>
+                        <div class="form-check">
+                            <input type="radio" id="rbOther" v-model="gender" name="gender" value="other" class="form-check-input">
+                            <label for="rbOther" class="form-check-label"><b>Other</b></label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="txtAddress" class="col-form-label">
+                            <b>Address:</b>
+                        </label>
+                        <div class="col auto">
+                            <input type="text" v-model="street" id="txtStreet" name="street" class="form-control"
+                                placeholder="Street">
+                        </div>
+                        <div class="col auto">
+                            <input type="text" v-model="city" id="txtCity" name="city" class="form-control"
+                                placeholder="City">
+                        </div>
+                        <div class="col auto">
+                            <input type="text" v-model="state" id="txtState" name="state" class="form-control"
+                                placeholder="State">
+                        </div>
+                        <div class="col auto">
+                            <input type="text" v-model="zipCode" id="txtZipcode" name="zipCode" class="form-control"
+                                placeholder="Zipcode" pattern="[0-9]{5}">
+                        </div>
+                    </div>
+                </div>
+                <br>
+
+                <div class="form-group col">
+                    <div class="auto">
+                        <label for="securityQuestions"><b>Security Questions:*</b></label>
+                        <select v-model="question" name="question" id="securityQuestions">
+                            <option v-for="option in options" v-bind:value="option.id" v-bind:key="option.value">
+                                {{option.value}}</option>
+                        </select>
+                        <br>
+                        <div v-if="securityQuestions >= 1" class="col auto" name="answer" id="securityAnswer">
+                            <input type="text" v-model="answer" id="securityAnswers" name="answer"
+                                class="form-control" placeholder="Answer">
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="form-group col">
+                    <div class="auto">
+                        <div class="col-25">
+                            <label for="txtBio"><b>About Me:</b></label>
+                        </div>
+                        <div class="col-95">
+                            <textarea id="txtBio" v-model="bio" name="bio" rows="4" cols="50" class="form-control"
+                                placeholder="Tell us about yourself."></textarea>
+                            <br><br>
+                        </div>
+                    </div>
+                </div>
+
+                <label for="chkRemeber"><b>Remember me:</b> <input id="chkRemeber" type="checkbox" checked="checked"
+                        name="chkRemember" style="margin-bottom: 15px"></label>
+
+                <p>By creating an account you agree to our <a href="#" style="color: #1427FE">Terms & Privacy</a>.</p>
+
+                <div class="clearfix">
+                    <button type="submit" class="btn" value="submit">Sign Up</button>
+                    <button type="submit" class="btn cancel" onclick="goBack()">Close</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    
+    <script src="../../public/signup.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script>
+        const mountedApp = app.mount("#app")
+    </script>
+</body>
