Removed Vue.js stuff, renamed variables to match signup, tidied error pages
Having issues getting anything to post to mongo right now. most of the error checking from Assignment one is implemented since I removed most of the vue.js stuff that was causing issues.

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,8 +1,5 @@
 <div class="container">
     <div class="col-sm-6">
-        <img src="images/SweatLogo.png">
-    </div>
-    <div class="col-sm-6">
-        <h1>Oops! What did you do!?</h1>
+        <h4>Sorry that does not exist...</h4>
     </div>
 </div>
