uploaded a test on accident

--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -18,7 +18,7 @@
 <body>
 
     <div class="form-popup" id="app">
-        <form action="/users/login" method="POST" class="form-container">
+        <form action="/users/create" method="POST" class="form-container">
             <div class="container">
                 <h1>Sign Up</h1>
                 
@@ -298,10 +298,6 @@
             var re = /[A-Za-z0-9 ._^%$!~@,]/g;
             return re.test(text);
         }
-
-    
-        
-
 
     </script>
 
