--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -18,7 +18,7 @@
 <body>
 
     <div class="form-popup" id="app">
-        <form action="/users/login" method="POST" class="form-container">
+        <form action="/users/create" method="POST" class="form-container">
             <div class="container">
                 <h1>Sign Up</h1>
                 
