--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -16,12 +16,12 @@
 
 
 <body>
-
+    
     <div class="form-popup" id="app">
-        <form action="/users/create" method="POST" class="form-container">
+        <form onsubmit="return checkForm(e)" action="/users/create" method="POST" class="form-container">
             <div class="container">
                 <h1>Sign Up</h1>
-                
+                    
                 <p>Please fill out this form to create an account with Sweat.</p>
                 <hr>
                 <div class="form-group col">
@@ -166,7 +166,7 @@
                 <p>By creating an account you agree to our <a href="#" style="color: #1427FE">Terms & Privacy</a>.</p>
 
                 <div class="clearfix auto">
-                    <button type="submit" class="button" value="submit" onclick="checkForm()">Sign Up</button>
+                    <button type="submit" class="button" >Sign Up</button>
                     <button type="cancel" class="button cancel" onclick="goBack()">Close</button>
                 </div>
             </div>
@@ -188,8 +188,16 @@
             window.history.back();
         }
 
-        function checkForm() {
+        function checkForm(e) {
             this.errors = [];
+
+            const passwordRules= [
+                { message: 'One lowercase letter required.', regex: /[a-z]+/ },
+                { message: "One uppercase letter required.", regex: /[A-Z]+/ },
+                { message: "One number required.", regex: /[0-9]+/ },
+                { message: "3 characters minimum.", regex: /.{3,}/ }
+            ];
+
             /*First Name*/
             if (!this.firstName) {
                 this.errors.push("First Name required.");
@@ -197,6 +205,7 @@
             } else if (!this.vaildText(this.firstName)) {
                 this.errors.push('Invalid characters in First Name.');
                 document.getElementsByName("firstName")[0].style.backgroundColor = "red";
+                return false;
             }
             /*Last Name*/
             if (!this.lastName) {
@@ -205,6 +214,7 @@
             } else if (!this.vaildText(this.lastName)) {
                 this.errors.push('Invalid characters in Last Name.');
                 document.getElementsByName("lastName")[0].style.backgroundColor = "red";
+                return false;
             }
             /*Username*/
             if (!this.username) {
@@ -213,15 +223,16 @@
             } else if (!this.vaildText(this.username)) {
                 this.errors.push('Invalid characters in User Name.');
                 document.getElementsByName("username")[0].style.backgroundColor = "red";
+                return false;
             }
-            /*Email*/
+            /*Email
             if (!this.email) {
                 this.errors.push('Email required.');
                 document.getElementsByName("email")[0].style.backgroundColor = "red";
             } else if (!this.validEmail(this.email)) {
                 this.errors.push('Valid email required.');
                 document.getElementsByName("email")[0].style.backgroundColor = "red";
-            }
+            }*/
 
             if (!this.confirmEmail) {
                 this.errors.push('Please confirm email address.');
@@ -230,6 +241,7 @@
                 this.errors.push('Email and Email Confirmation do not match');
                 document.getElementsByName("email")[0].style.backgroundColor = "red";
                 document.getElementsByName("confirmEmail")[0].style.backgroundColor = "red";
+                return false;
             }
             /*Password*/
             if (!this.password) {
@@ -240,14 +252,16 @@
                 this.errors.push("Please confrim your password.");
                 document.getElementsByName("confirmPassword")[0].style.backgroundColor = "red";
             } else if (this.password != this.confirmPassword) {
-                this.errors.push('Password and Password confirmation do not match');
+                alert('Password and Password confirmation do not match');
                 document.getElementsByName("confirmPassword")[0].style.backgroundColor = "red";
                 document.getElementsByName("password")[0].style.backgroundColor = "red";
+                return false;
             } else {
                 for (let condition of this.passwordRules) {
                     if (!condition.regex.test(this.password)) {
-                        this.errors.push(condition.message);
+                        alert(condition.message);
                         document.getElementsByName("password")[0].style.backgroundColor = "red";
+                        return false;
                     }
                 }
             }
@@ -255,24 +269,29 @@
             if (!this.vaildText(this.street)) {
                 this.errors.push('Invalid characters in Street Address.');
                 document.getElementsByName("street")[0].style.backgroundColor = "red";
+                return false;
             }
             if (!this.vaildText(this.city)) {
                 this.errors.push('Invalid characters in City field.');
                 document.getElementsByName("city")[0].style.backgroundColor = "red";
+                return false;
             }
             if (!this.vaildText(this.state)) {
                 this.errors.push('Invalid characters in State field.');
                 document.getElementsByName("state")[0].style.backgroundColor = "red";
+                return false;
             }
             if (!this.vaildText(this.zipCode)) {
                 this.errors.push('Invalid characters in Zipcode field.');
                 document.getElementsByName("zipCode")[0].style.backgroundColor = "red";
+                return false;
             }
 
             /*Security Question*/
             if(this.question == ""){
                 this.errors.push('Security Question is required.');
                 document.getElementsByName("question")[0].style.backgroundColor = "red";
+                return false;
             }
             if (!this.answer) {
                 this.errors.push('Security Answer is required.');
@@ -281,18 +300,23 @@
             else if (!this.vaildText(this.answer)) {
                 this.errors.push('Invalid characters in Security field.');
                 document.getElementsByName("answer")[0].style.backgroundColor = "red";
+                return false;
             }
 
             /*Bio*/
             if (!this.vaildText(this.bio)) {
                 this.errors.push('Invalid characters in Biography field.');
                 document.getElementsByName("bio")[0].style.backgroundColor = "red";
+                return false;
             }
 
             if (!this.errors.length) {
                 return true;/*No ERRORS! WOW! SO COOL! YOUR GREAT!*/
             }
-
+            else{
+                return false;
+            }
+            e.preventDefault();
         }
         function vaildText(text) {
             var re = /[A-Za-z0-9 ._^%$!~@,]/g;
