Added authentication and flash messages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,7 +16,11 @@ body {
 .main-content {
   flex: 1;
 }
-
+.vertically-centered {
+}
+.password-change a:hover {
+  color: #fff;
+}
 @media only screen and (max-width: 600px) {
   body {
     padding-left: 140px;
