--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -21,11 +21,11 @@
     <header></header>
     <div class="flash-messages">
       <% if(flashMessages) { %> <% if(flashMessages.success) { %>
-      <div class="alert alert-success"><%= flashMessages.success %></div>
+      <div class="alert alert-success mb-0"><%= flashMessages.success %></div>
       <% }else if(flashMessages.error) { %>
-      <div class="alert alert-danger"><%= flashMessages.error %></div>
+      <div class="alert alert-danger mb-0"><%= flashMessages.error %></div>
       <% }else if(flashMessages.warning) { %>
-      <div class="alert alert-warning"><%= flashMessages.warning %></div>
+      <div class="alert alert-warning mb-0"><%= flashMessages.warning %></div>
       <% } %> <% } %>
     </div>
     <form action="/users/login" method="POST">
