--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,136 +1,83 @@
-
-    <!-- The feed that the User sees -->
-    <div class="col-sm-12 col-lg-8 mx-auto"">
-        <br>
-      <!-- content-box is one "conversation" between users-->
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <div class="video-container">
-          <iframe
-            width="420"
-            height="315"
-            src="https://www.youtube.com/embed/-jEQmE-j-bo"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Bill Dauterive.</a></div>
-        <div class="txtDate">Posted on: 10/12/2020 11:34am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <br />
-        <img
-          src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2021/02/07/16127386657990.jpg"
-          alt="super-bowl"
-          style="width: 100%; height: 400px"
-        />
-
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Bill Dauterive.</a></div>
-        <div class="txtDate">Posted on: 11/01/2020 09:34am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <br />
-        <img
-          src="https://static2.cbrimages.com/wordpress/wp-content/uploads/2020/02/Featured-Image-Bill-Cropped.jpg"
-          alt="Bill-Cropped"
-          style="width: 100%; height: 400px"
-        />
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Bill Dauterive.</a></div>
-        <div class="txtDate">Posted on: 11/12/2020 10:40am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <br />
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Bill Dauterive.</a></div>
-        <div class="txtDate">Posted on: 1/12/2021 09:34am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <br />
-        <img
-          src="https://s2.dmcdn.net/v/Obvz31U9WtXrE_IPN/x240"
-          alt="speedo"
-          style="width: 100%; height: 400px"
-        />
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Dale Gribble.</a></div>
-        <div class="txtDate">Posted on: 1/12/2021 09:34am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-    </div>
-
+<div class="container main-content">
+  <div
+    class="col-sm-10 mx-auto text-center table-responsive vertically-centered"
+  >
+    <table class="col-sm-10 table-dark mx-auto table table-striped table-hover">
+      <thead>
+        <tr class="">
+          <th colspan="2" scope="col text-center">
+            <%= `${user.name.firstName} ${user.name.lastName}` %>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="width: 50%" class="text-right">Name:</td>
+          <td style="width: 50%" class="text-left">
+            <%= `${user.name.firstName} ${user.name.lastName}` %>
+          </td>
+        </tr>
+        <tr>
+          <td class="text-right">Username:</td>
+          <td class="text-left"><%= user.username %></td>
+        </tr>
+        <tr>
+          <td class="text-right">Date of Birth:</td>
+          <td class="text-left"><%= user.dob.toLocaleDateString("en-US") %></td>
+        </tr>
+        <tr>
+          <td class="text-right">Gender:</td>
+          <td class="text-left"><%= user.gender %></td>
+        </tr>
+        <tr>
+          <td class="text-right">Email:</td>
+          <td class="text-left"><%= user.email %></td>
+        </tr>
+        <tr>
+          <td class="text-right">Street:</td>
+          <td class="text-left"><%= user.location.street %></td>
+        </tr>
+        <tr>
+          <td class="text-right">City:</td>
+          <td class="text-left"><%= user.location.city %></td>
+        </tr>
+        <tr>
+          <td class="text-right">State:</td>
+          <td class="text-left"><%= user.location.state %></td>
+        </tr>
+        <tr>
+          <td class="text-right">City:</td>
+          <td class="text-left"><%= user.location.zipCode %></td>
+        </tr>
+        <tr>
+          <td class="text-right"><%= user.security_questions.question %>:</td>
+          <td class="text-left"><%= user.security_questions.answer %></td>
+        </tr>
+        <tr>
+          <td class="text-right">Bio:</td>
+          <td class="text-left"><%= user.bio %></td>
+        </tr>
+        <tr>
+          <td class="text-right">
+            <a href="<%= `/users/${user._id}/edit` %>" class="btn btn-warning"
+              >Edit</a
+            >
+          </td>
+          <td class="text-left">
+            <a
+              href="<%= `/users/${user._id}/delete?_method=DELETE` %>"
+              onclick="return confirm('Are you sure?')"
+              class="btn btn-danger"
+              >Delete</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" scope="col" class="password-change text-center">
+            <a href="#">Change Password</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
