--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -139,7 +139,7 @@
         </div>-->
       </div>
     </header>
-    <%- body%>
+    <div class="content-screen"><%- body%></div>
     <footer>
       <div class="law">
         <p>Copyright &copy; 2021 Sweat. All Rights Reserved.</p>
