--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,7 +1,5 @@
 <div class="container main-content">
-  <div
-    class="col-sm-10 mx-auto text-center table-responsive vertically-centered"
-  >
+  <div class="col-sm-10 mx-auto text-center table-responsive">
     <table class="col-sm-10 table-dark mx-auto table table-striped table-hover">
       <thead>
         <tr class="">
@@ -74,7 +72,7 @@
         </tr>
         <tr>
           <td colspan="2" scope="col" class="password-change text-center">
-            <a href="#">Change Password</a>
+            <a href="<%= `/users/${user._id}/change` %>">Change Password</a>
           </td>
         </tr>
       </tbody>
