User can post a story (title, content, image, followers, author) to the db
While it posts the User data is not being populated to the story. So users don't have any posts and posts don't have authors which means the feed doesn't show up. YAY~!

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="http://localhost:3000/css/footer.css" />
     <link rel="stylesheet" href="http://localhost:3000/css/app.css" />
     <title>Sweat</title>
-    <script src="../public/scripts/app.js"></script>
+    <!--<script src="../public/scripts/app.js"></script>-->
   </head>
 
   <body>
@@ -101,7 +101,7 @@
               ></a>
             </li>
             <li>
-              <a href="#">
+              <a href="<%= `/stories/${currentUser._id}/story` %>">
                 <img
                   src="http://localhost:3000/icons/post.png"
                   alt="post"
