--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,137 +1,8 @@
 <div class="main-content">
-  <div class="body" id="randomContent">
     <!-- The feed that the User sees -->
-    <div class="content">
       <!-- content-box is one "conversation" between users-->
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <div class="video-container">
-          <iframe
-            width="420"
-            height="315"
-            src="https://www.youtube.com/embed/-jEQmE-j-bo"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Bill Dauterive.</a></div>
-        <div class="txtDate">Posted on: 10/12/2020 11:34am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
+      <div class="cover-container d-flex mx-auto flex-column">
+       <!--  include ('./stories/showFeed'); -->
       </div>
       <br />
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <br />
-        <img
-          src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2021/02/07/16127386657990.jpg"
-          alt="super-bowl"
-          style="width: 100%; height: 400px"
-        />
-
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Bill Dauterive.</a></div>
-        <div class="txtDate">Posted on: 11/01/2020 09:34am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <br />
-        <img
-          src="https://static2.cbrimages.com/wordpress/wp-content/uploads/2020/02/Featured-Image-Bill-Cropped.jpg"
-          alt="Bill-Cropped"
-          style="width: 100%; height: 400px"
-        />
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Bill Dauterive.</a></div>
-        <div class="txtDate">Posted on: 11/12/2020 10:40am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <br />
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Bill Dauterive.</a></div>
-        <div class="txtDate">Posted on: 1/12/2021 09:34am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-      <div class="content-box">
-        <h4>This is where sweaty content goes!</h4>
-        <br />
-        <img
-          src="https://s2.dmcdn.net/v/Obvz31U9WtXrE_IPN/x240"
-          alt="speedo"
-          style="width: 100%; height: 400px"
-        />
-        <div class="txtCaption">
-          Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-          definitiones no quo, maluisset concludaturque et eum, altera fabulas
-          ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-          Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-          Eum no molestiae voluptatibus.
-        </div>
-        <br />
-        <div class="txtAuthor">Post by: <a href="#">Dale Gribble.</a></div>
-        <div class="txtDate">Posted on: 1/12/2021 09:34am</div>
-        <div class="btnReply">
-          <a href="#"></a
-          ><button>
-            <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-          </button>
-        </div>
-      </div>
-      <br />
-    </div>
-  </div>
 </div>
