Stories now have authors, and the feed is displayed as before with images
The authors are not getting added to the post right now but the db does know who wrote what.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
     <!-- The feed that the User sees -->
       <!-- content-box is one "conversation" between users-->
       <div class="cover-container d-flex mx-auto flex-column">
-       <!--  include ('./stories/showFeed'); -->
+       <%-  include (`./stories/story`); %>
       </div>
       <br />
 </div>
