--- a/public/css/landingPage.css
+++ b/public/css/landingPage.css
@@ -411,18 +411,15 @@ a {
   width: 100%;
 }
 
+.center {
+  text-align: center;
+}
+
 /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .content {
   padding-top: 102px;
 }
 
-/*background containing the content boxes */
-.body {
-  background: #9ba4b4;
-  border-radius: 25px;
-  padding: 10px 135px;
-  color: #14274e;
-}
 /* honestly not sure */
 .randomContent {
   background: #f1f6f9;
