--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -1,33 +1,36 @@
 <div class="body" id="randomContent">
   <!-- The feed that the User sees -->
-  <div class="content">
-    <div class="content-box">
-      <h4>
-      <%= story.title %>
-      </h4>
-      <br />
-      <% if (!story.img) {%>
-        <h5>No Image</h5>
-        <% } else{ %>
-          <img src="data:image/<%=story.img.contentType%>;base64,
+  <div class="col-sm-10 mx-auto text-center">
+    <div class="content">
+      <div class="content-box">
+        <h4>
+          <%= story.title %>
+        </h4>
+        <br />
+        <% if (!story.img) {%>
+          <h5>No Image</h5>
+          <% } else{ %>
+            <img src="data:image/<%=story.img.contentType%>;base64,
               <%=story.img.data.toString('base64')%>" alt="image" style="width: 100%; height: 400px">
-          <% } %>
-            <div class="txtCaption">
-              <%= story.content %>
-            </div>
-            <br />
-            <div class="txtAuthor">Post by:
-              <a href="<%= `/stories/${story.author._id}` %>">
-                <%= story.author.username %></a>
-            </div>
-            <div class="txtDate">Posted on: <%= story.timestamp %>
-            </div>
-            <div class="btnReply">
-              <a href="#"></a>
-              <button>
-                <img src="../icons/post.png" alt="Reply" class="icon" />Reply
-              </button>
-            </div>
+            <% } %>
+              <div class="txtCaption">
+                <%= story.content %>
+              </div>
+              <br />
+              <div class="txtAuthor">Post by:
+                <a href="<%= `/stories/${story.author._id}` %>">
+                  <%= story.author %>
+                </a>
+              </div>
+              <div class="txtDate">Posted on: <%= story.timestamps %>
+              </div>
+              <div class="btnReply">
+                <a href="#"></a>
+                <button>
+                  <img src="../icons/post.png" alt="Reply" class="icon" />Reply
+                </button>
+              </div>
+      </div>
     </div>
   </div>
 </div>
