--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -4,7 +4,7 @@
       <thead>
         <tr class="">
           <th colspan="2" scope="col text-center">
-            <%= `${user.name.firstName} ${user.name.lastName}` %>
+            <%= `${user.name.firstName.replace(/\w/, c=> c.toUpperCase())} ${user.name.lastName.replace(/\w/, c=> c.toUpperCase())}` %>
           </th>
         </tr>
       </thead>
@@ -12,7 +12,7 @@
         <tr>
           <td style="width: 50%" class="text-right">Name:</td>
           <td style="width: 50%" class="text-left">
-            <%= `${user.name.firstName} ${user.name.lastName}` %>
+            <%= `${user.name.firstName.replace(/\w/, c=> c.toUpperCase())} ${user.name.lastName.replace(/\w/, c=> c.toUpperCase())}` %>
           </td>
         </tr>
         <tr>
@@ -33,15 +33,15 @@
         </tr>
         <tr>
           <td class="text-right">Street:</td>
-          <td class="text-left"><%= user.location.street %></td>
+          <td class="text-left"><%= user.location.street.replace(/\w/, c=> c.toUpperCase()) %></td>
         </tr>
         <tr>
           <td class="text-right">City:</td>
-          <td class="text-left"><%= user.location.city %></td>
+          <td class="text-left"><%= user.location.city.replace(/\w/, c=> c.toUpperCase()) %></td>
         </tr>
         <tr>
           <td class="text-right">State:</td>
-          <td class="text-left"><%= user.location.state %></td>
+          <td class="text-left"><%= user.location.state.replace(/\w/, c=> c.toUpperCase()) %></td>
         </tr>
         <tr>
           <td class="text-right">City:</td>
@@ -54,6 +54,10 @@
         <tr>
           <td class="text-right">Bio:</td>
           <td class="text-left"><%= user.bio %></td>
+        </tr>
+        <tr>
+          <td class="text-right">Stories:</td>
+          <td class="text-left"><%= user.Stories.length %></td>
         </tr>
         <tr>
           <td class="text-right">
