--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,10 +14,12 @@
   justify-content: center;
 }*/
 
+
 .content-screen {
   min-height: calc(100vh - 111px);
   width: 100%;
   display: flex;
+  padding: 5%;
   background-color: #9ba4b4;
   align-items: center;
   justify-content: center;
