--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,7 +34,7 @@
     <header>
       <div class="search-bar-header">
         <div class="page-title">
-          <h3 class="text-uppercase">Home</h3>
+          <h3 class="text-uppercase">Welcome <%= `${currentUser.name.firstName} ${currentUser.name.lastName}` %></h3>
         </div>
         <div class="search">
           <!--<button><img src="http://localhost:3000/icons/search.png" /></button>-->
@@ -106,6 +106,14 @@
                   src="http://localhost:3000/icons/post.png"
                   alt="post"
                   class="icon" /><span class="post-text"></span
+              ></a>
+            </li>
+            <li>
+              <a href="<%= `/stories/${currentUser._id}/showFeed` %>">
+                <img
+                  src="http://localhost:3000/icons/trending.png"
+                  alt="trending"
+                  class="icon" /><span class="trending-text"></span
               ></a>
             </li>
           </ul>
