--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -1,7 +1,6 @@
-<div class="body" id="randomContent">
-  <!-- The feed that the User sees -->
-  <div class="col-sm-10 mx-auto text-center">
-    <div class="content">
+<div class="main-content">
+  <div class="cover-container d-flex mx-auto flex-column">
+    <!-- Show.ejs -->
       <div class="content-box">
         <h4>
           <%= story.title %>
@@ -18,23 +17,32 @@
               </div>
               <br />
               <div class="txtAuthor">Post by:
-                <a href="<%= `/stories/${story.author._id}` %>">
+                <a href="<%= `/users/${story.author}` %>">
                   <%= story.author %>
                 </a>
               </div>
-              <div class="txtDate">Posted on: <%= story.timestamps %>
+              <div class="txtDate">Posted on: <%= story.createdAt %>
               </div>
-              <div class="btnReply">
-                <a href="#"></a>
+              <div class="btnFollow ">
+                <a href="<%=`/stories/${story._id}`%>"></a>
                 <button>
-                  <img src="../icons/post.png" alt="Reply" class="icon" />Reply
+                  Follow
                 </button>
               </div>
+              <% if (story.author == `${currentUser._id}`) {%>
+                <div class="btnEdit">
+                  <a class="button" href="<%=`/stories/${story._id}/edit`%>">
+                    Edit Story
+                  </a>
+                </div>
+                <div class="btnDelete">
+                  <a class="button" href="<%= `/stories/${story._id}/delete?_method=DELETE` %>"
+                    onclick="return confirm('Are you sure you want to delete this record?')">Delete</a>
+                </div>            
+              <% } %>
       </div>
-    </div>
   </div>
 </div>
-
 <div>
   <a class="button" href="/stories">View all stories</a>
 </div>
